--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="Fn8ri9RLegwF2izp3g2BTQ5UrPZNY5ehkJ-U6vlHrMM" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Compass | Modern Love Calculator</title>
